--- a/llamaindex.ipynb
+++ b/llamaindex.ipynb
@@ -418,13 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "The model `StabilityAI/stablelm-tuned-alpha-3b` and tokenizer `Qwen/Qwen2-1.5B-Instruct` are different, please ensure that they are compatible.\n"
+     ]
+    }
+   ],
    "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "tokenizer_name = model_name\n",
-    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+    "hf_llm = HuggingFaceLLM(model=model, tokenizer_name=tokenizer_name, is_chat_model=True)\n",
     "Settings.llm = hf_llm\n"
    ]
   },
@@ -509,9 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
@@ -537,6 +557,9 @@
     "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "\n",
     "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True)\n",
+    "set_global_tokenizer(\n",
+    "    AutoTokenizer.from_pretrained(tokenizer_name).encode  # pass in the HuggingFace model org + repo\n",
+    ")\n",
     "# hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name)\n",
     "# hf_llm = HuggingFaceInferenceAPI(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, is_function_calling_model=True)\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
@@ -554,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +594,7 @@
     "query_engine_tool = QueryEngineTool(\n",
     "    query_engine=query_engine,\n",
     "    metadata=ToolMetadata(\n",
-    "        name=\"value_retriever\",\n",
+    "        name=\"spreadsheet_value_retriever\",\n",
     "        description=\"useful for retrieving specific values from a spreadsheet\",\n",
     "    ),\n",
     ")\n",
@@ -599,13 +622,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.core.agent import ReActAgentWorker\n",
-    "agent = ReActAgentWorker.from_tools(llm=hf_llm, tools=[adding_tool, query_engine_tool])"
+    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +636,7 @@
     "    content=\"What is the sum of Disposition Fee and Sales Cost from this spreadsheet?\",\n",
     ")\n",
     "\n",
-    "response = query_engine.chat(\n",
+    "response = hf_llm.chat(\n",
     "    messages=[usr_msg],\n",
     "    tools=[\n",
     "        adding_tool,\n",
@@ -626,19 +648,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assistant\n",
+      "\n",
+      "I'm sorry, but as an AI language model, I don't have access to any specific spreadsheet or financial data unless it has been provided to me in text format. Could you please provide more information about the spreadsheet so that I can assist you better?\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.message.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
