--- a/llamaindex.ipynb
+++ b/llamaindex.ipynb
@@ -173,7 +173,6 @@
     "import os\n",
     "access_token = \"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\"\n",
     "os.environ['HF_TOKEN']=access_token\n",
-    "# model_name = \"jmars/trithemius-mistral-0.3-7b\"\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name=\"HuggingFaceH4/zephyr-7b-alpha\"\n",
     "tokenizer_name = model_name\n",
@@ -332,15 +331,7 @@
     "    [agent_server_1, tool_service],\n",
     "    control_plane,\n",
     "    message_queue,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
     "query_str = \"What is the Disposition Fee?\"\n",
     "result = launcher.launch_single(query_str)"
    ]
@@ -418,18 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "The model `StabilityAI/stablelm-tuned-alpha-3b` and tokenizer `Qwen/Qwen2-1.5B-Instruct` are different, please ensure that they are compatible.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
@@ -493,46 +475,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Literal\n",
-    "from llama_index.core.bridge.pydantic import BaseModel, Field\n",
-    "from llama_index.core.tools import FunctionTool\n",
-    "from llama_index.core.base.llms.types import (\n",
-    "    ChatMessage,\n",
-    "    MessageRole,\n",
-    ")\n",
-    "\n",
-    "\n",
-    "usr_msg = ChatMessage(\n",
-    "    role=MessageRole.USER,\n",
-    "    content=f\"What is the sum of Disposition Fee and Sales Cost from this spreadsheet?\",\n",
-    ")\n",
-    "agent1.chat(usr_msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(response.message.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    }
-   ],
-   "source": [
     "import torch\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
@@ -552,11 +494,16 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
+    "import os\n",
+    "access_token = \"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\"\n",
+    "os.environ['HF_TOKEN']=access_token\n",
+    "\n",
+    "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "tokenizer_name = model_name\n",
     "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "\n",
-    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True)\n",
+    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, device_map='auto', max_new_tokens=2000, context_window=8000)\n",
     "set_global_tokenizer(\n",
     "    AutoTokenizer.from_pretrained(tokenizer_name).encode  # pass in the HuggingFace model org + repo\n",
     ")\n",
@@ -577,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,11 +538,11 @@
     ")\n",
     "\n",
     "\n",
-    "query_engine_tool = QueryEngineTool(\n",
+    "query_engine_tools = QueryEngineTool(\n",
     "    query_engine=query_engine,\n",
     "    metadata=ToolMetadata(\n",
     "        name=\"spreadsheet_value_retriever\",\n",
-    "        description=\"useful for retrieving specific values from a spreadsheet\",\n",
+    "        description=\"contains the information of a spreadsheet, and is useful for retrieving specific values from a spreadsheet\",\n",
     "    ),\n",
     ")\n",
     "\n",
@@ -622,47 +569,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "usr_msg = ChatMessage(\n",
-    "    role=MessageRole.USER,\n",
-    "    content=\"What is the sum of Disposition Fee and Sales Cost from this spreadsheet?\",\n",
+    "from llama_agents import (\n",
+    "    AgentService,\n",
+    "    ToolService,\n",
+    "    LocalLauncher,\n",
+    "    MetaServiceTool,\n",
+    "    ControlPlaneServer,\n",
+    "    SimpleMessageQueue,\n",
+    "    AgentOrchestrator,\n",
     ")\n",
     "\n",
-    "response = hf_llm.chat(\n",
-    "    messages=[usr_msg],\n",
-    "    tools=[\n",
-    "        adding_tool,\n",
-    "        query_engine_tool\n",
-    "    ],\n",
-    "    # tool_choice=\"add_values\",\n",
+    "from llama_index.core.agent import FunctionCallingAgentWorker\n",
+    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create our multi-agent framework components\n",
+    "message_queue = SimpleMessageQueue()\n",
+    "control_plane = ControlPlaneServer(\n",
+    "    message_queue=message_queue,\n",
+    "    orchestrator=AgentOrchestrator(llm=hf_llm),\n",
+    ")\n",
+    "\n",
+    "# define Tool Service\n",
+    "tool_service = ToolService(\n",
+    "    message_queue=message_queue,\n",
+    "    tools=[query_engine_tools],#, adding_tool],\n",
+    "    running=True,\n",
+    "    step_interval=0.5,\n",
+    ")\n",
+    "\n",
+    "# define meta-tools here\n",
+    "meta_tools = [\n",
+    "    await MetaServiceTool.from_tool_service(\n",
+    "        t.metadata.name,\n",
+    "        message_queue=message_queue,\n",
+    "        tool_service=tool_service,\n",
+    "    )\n",
+    "    for t in [query_engine_tools]#, adding_tool]\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# define Agent and agent service\n",
+    "# worker1 = FunctionCallingAgentWorker.from_tools(\n",
+    "worker1 = ReActAgentWorker.from_tools(\n",
+    "    meta_tools,\n",
+    "    llm=hf_llm,\n",
+    ")\n",
+    "agent1 = worker1.as_agent()\n",
+    "agent_server_1 = AgentService(\n",
+    "    agent=agent1,\n",
+    "    message_queue=message_queue,\n",
+    "    description=\"Used to answer questions over Uber and Lyft 10K documents\",\n",
+    "    service_name=\"uber_lyft_10k_analyst_agent\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "assistant\n",
-      "\n",
-      "I'm sorry, but as an AI language model, I don't have access to any specific spreadsheet or financial data unless it has been provided to me in text format. Could you please provide more information about the spreadsheet so that I can assist you better?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(response.message.content)"
+    "launcher = LocalLauncher(\n",
+    "    [agent_server_1, tool_service],\n",
+    "    control_plane,\n",
+    "    message_queue,\n",
+    ")\n",
+    "query_str = \"What is the Disposition Fee?\"\n",
+    "result = launcher.launch_single(query_str)"
    ]
   },
   {
@@ -670,29 +645,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from llama_index.agent.introspective import SelfReflectionAgentWorker"
+    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
+    "agent = ReActAgent.from_tools(\n",
+    "    [query_engine_tools, adding_tool],\n",
+    "    llm=hf_llm,\n",
+    "    verbose=True,\n",
+    "    )"
    ]
   },
   {
@@ -700,14 +659,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "message = ['Selling Costs',\n",
+    "  'Disposition Fee',\n",
+    "  'Net Operating Income',\n",
+    "  'Loan Assumption/Payoff',\n",
+    "  'Return of Forecasted Reserves',\n",
+    "  'CF Y 11',\n",
+    "  'Return of Maximum Offering Amount',\n",
+    "  'Projected Terminal Cap Rate',\n",
+    "  'Cash Flows']\n",
+    "content='Retrieve the following values from the spreadsheet: Selling Costs, Disposition Fee, Net Operating Income, Loan Assumption/Payoff, Return of Forecasted Reserves, CF Y 11, Return of Maximum Offering Amount, Projected Terminal Cap Rate, Cash Flows (categories 1 through 9)\\nThen add Disposition Fee and Selling Cost together.'\n",
+    "\n",
+    "usr_msg = ChatMessage(\n",
+    "    role=MessageRole.ASSISTANT,\n",
+    "    content=content\n",
+    ")\n",
+    "response = agent1.chat(content)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content='Retrieve the following values from the spreadsheet: Selling Costs, Disposition Fee, Net Operating Income, Loan Assumption/Payoff, Return of Forecasted Reserves, CF Y 11, Return of Maximum Offering Amount, Projected Terminal Cap Rate, Cash Flows (categories 1 through 9)\\nThen add Disposition Fee and Selling Cost together.'\n",
+    "\n",
+    "messages = [\n",
+    "        {\"role\": \"user\", \"content\": content},\n",
+    "    ]"
+   ]
   },
   {
    "cell_type": "code",
@@ -754,6 +745,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.agent.introspective import SelfReflectionAgentWorker"
+   ]
   },
   {
    "cell_type": "code",
