--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -4,44 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agent use case #1 - Financial data collection\n",
-    "\n",
-    "* Build dataset (possibly revisit information compression)\n",
-    "  * Design targets using price data\n",
-    "  * Build dataset justifying the target\n",
-    "\n",
-    "* Collect time series data\n",
-    "  * preprocess \n",
-    "  * Create features\n",
-    "* Collect news\n",
-    "  * Preprocess\n",
-    "  * Extract trading info\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip3 install llama-index-llms-ollama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip3 install -U llama-index --upgrade --no-cache-dir --force-reinstall\n",
-    "!pip3 install llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api\n",
-    "!pip3 install openpyxl"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "!pip3 install \"transformers[torch]\" \"huggingface_hub[inference]\""
    ]
   },
@@ -53,17 +15,16 @@
    "source": [
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
-    "llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://localhost:11434')"
+    "# llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://172.21.0.2:11434')\n",
+    "llm = Ollama(model=\"qwen2:1.5b\", request_timeout=600, base_url='http://0.0.0.0:11434')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# !apt update && apt install -y net-tools\n",
-    "!netstat -aon | grep 11434"
+    "!apt update && apt install -y iputils-ping\n",
+    "!ping ollama_cat"
    ]
   },
   {
@@ -847,18 +808,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
