--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -12,19 +12,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
-    "# llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://172.21.0.2:11434')\n",
-    "llm = Ollama(model=\"qwen2:1.5b\", request_timeout=600, base_url='http://0.0.0.0:11434')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!apt update && apt install -y iputils-ping\n",
-    "!ping ollama_cat"
+    "# From host run:\n",
+    "# docker exec -it ollama ollama run qwen2:1.5b\n",
+    "\n",
+    "# llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://localhost:11434')\n",
+    "llm = Ollama(model=\"qwen2:1.5b\", base_url='http://ollama:11434')"
    ]
   },
   {
@@ -34,6 +36,15 @@
    "outputs": [],
    "source": [
     "response = llm.complete(\"Who let the dogs out?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
    ]
   },
   {
@@ -61,45 +72,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "context = \"\"\"Purpose: The primary role of this agent is to assist users by analyzing code. It should\n",
-    "            be able to generate code and answer questions about code provided. \"\"\"\n",
-    "\n",
-    "code_parser_template = \"\"\"Parse the response from a previous LLM into a description and a string of valid code, \n",
-    "                            also come up with a valid filename this could be saved as that doesnt contain special characters. \n",
-    "                            Here is the response: {response}. You should parse this in the following JSON Format: \"\"\"\n",
-    "\n",
-    "from llama_index.core.tools import FunctionTool\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "def code_reader_func(file_name):\n",
-    "    path = os.path.join(\"data\", file_name)\n",
-    "    try:\n",
-    "        with open(path, \"r\") as f:\n",
-    "            content = f.read()\n",
-    "            return {\"file_content\": content}\n",
-    "    except Exception as e:\n",
-    "        return {\"error\": str(e)}\n",
-    "\n",
-    "\n",
-    "code_reader = FunctionTool.from_defaults(\n",
-    "    fn=code_reader_func,\n",
-    "    name=\"code_reader\",\n",
-    "    description=\"\"\"this tool can read the contents of code files and return \n",
-    "    their results. Use this when you need to read the contents of a file\"\"\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "LLAMA_API_KEY = 'llx-q5yu4FxUqUChxv4dpGKjSvgN7nSwb8rWPqWoxhkP0NqmQKmv'\n",
@@ -808,6 +782,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
