--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -15,63 +15,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.llms.ollama import Ollama\n",
-    "\n",
-    "# From host run:\n",
-    "# docker exec -it ollama ollama run qwen2:1.5b\n",
-    "\n",
-    "# llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://localhost:11434')\n",
-    "llm = Ollama(model=\"qwen2:1.5b\", base_url='http://ollama:11434')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = llm.complete(\"Who let the dogs out?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(response.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_parse import LlamaParse\n",
-    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, PromptTemplate\n",
-    "from llama_index.core.embeddings import resolve_embed_model\n",
-    "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
-    "from llama_index.core.agent import ReActAgent\n",
-    "from pydantic import BaseModel\n",
-    "from llama_index.core.output_parsers import PydanticOutputParser\n",
-    "from llama_index.core.query_pipeline import QueryPipeline\n",
-    "import os\n",
-    "import ast\n",
-    "\n",
-    "\n",
-    "from llama_parse import LlamaParse\n",
-    "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,14 +27,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip3 install sentencepiece protobuf"
+    "!rm -rf /root/.cache/huggingface/hub"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!rm -rf /root/.cache/huggingface/hub"
+    "!pip3 install --upgrade llama-parse llama-agents llama-index-llms-ollama llama-index \n",
+    "# llama-index-llms-huggingface llama-index-embeddings-huggingface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!pip3 install llama-index-embeddings-ollama"
    ]
   },
   {
@@ -99,14 +50,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from llama_index.llms.ollama import Ollama\n",
+    "from llama_index.embeddings.ollama import OllamaEmbedding\n",
+    "\n",
+    "# From host run:\n",
+    "# docker exec -it ollama ollama run qwen2:1.5b\n",
+    "\n",
+    "# model_name = \"phi3:instruct\"\n",
+    "# model_name = \"mistral:instruct\"\n",
+    "model_name = \"qwen2:1.5b\"\n",
+    "# model_name = \"gemma:1.5b\"\n",
+    "llm = Ollama(model=model_name, base_url='http://ollama:11434', json_mode=True)\n",
+    "llm.metadata"
+   ]
   },
   {
    "cell_type": "code",
@@ -115,12 +72,12 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
+    "# from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
-    "from llama_index.llms.huggingface import HuggingFaceLLM\n",
+    "# from llama_index.llms.huggingface import HuggingFaceLLM\n",
     "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
     "from llama_index.readers.file import PandasExcelReader\n",
-    "from llama_index.core import set_global_tokenizer\n",
+    "# from llama_index.core import set_global_tokenizer\n",
     "from llama_index.core.embeddings import resolve_embed_model\n",
     "from transformers import AutoTokenizer\n",
     "from llama_index.core import (\n",
@@ -142,21 +99,23 @@
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
     "# documents[0].text = documents[0].text.split(\"\\n\")\n",
-    "import os\n",
-    "access_token = \"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\"\n",
-    "os.environ['HF_TOKEN']=access_token\n",
-    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
+    "# import os\n",
+    "# access_token = \"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\"\n",
+    "# os.environ['HF_TOKEN']=access_token\n",
+    "# model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name=\"HuggingFaceH4/zephyr-7b-alpha\"\n",
-    "tokenizer_name = model_name\n",
+    "# tokenizer_name = model_name\n",
     "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "\n",
     "# hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name)\n",
-    "hf_llm = HuggingFaceInferenceAPI(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, is_function_calling_model=True)\n",
+    "# hf_llm = HuggingFaceInferenceAPI(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, is_function_calling_model=True)\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "# embed_model = OllamaEmbedding(model_name=model_name, base_url='http://ollama:11434')\n",
     "vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
     "# vector_index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
-    "query_engine = vector_index.as_query_engine(llm=hf_llm, top_k=3)\n",
+    "query_engine = vector_index.as_query_engine(llm=llm, top_k=3)\n",
     "\n",
-    "Settings.llm = hf_llm\n",
+    "Settings.llm = llm\n",
     "Settings.embed_model = embed_model"
    ]
   },
@@ -178,23 +137,14 @@
    "source": [
     "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
     "\n",
-    "query_engine_tools = QueryEngineTool(\n",
+    "query_engine_tool = QueryEngineTool(\n",
     "    query_engine=query_engine,\n",
     "    metadata=ToolMetadata(\n",
-    "        name=\"value_retriever\",\n",
-    "        description=\"useful for retrieving specific values from a spreadsheet\",\n",
+    "        name=\"spreadsheet_value_retriever\",\n",
+    "        description=\"useful for retrieving specified values from a spreadsheet\",\n",
     "    ),\n",
     ")\n",
     "\n",
-    "# query_engine_tools=[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from typing import List, Literal\n",
     "from llama_index.core.bridge.pydantic import BaseModel, Field\n",
     "from llama_index.core.tools import FunctionTool\n",
@@ -214,7 +164,7 @@
     "    fn_schema=AddingArgs,\n",
     ")\n",
     "\n",
-    "# query_engine_tools = [adding_tool]\n"
+    "tools=[query_engine_tool, adding_tool]"
    ]
   },
   {
@@ -234,13 +184,13 @@
     ")\n",
     "\n",
     "from llama_index.core.agent import FunctionCallingAgentWorker\n",
-    "from llama_index.core.agent import ReActAgentWorker\n",
+    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
     "\n",
     "# create our multi-agent framework components\n",
     "message_queue = SimpleMessageQueue()\n",
     "control_plane = ControlPlaneServer(\n",
     "    message_queue=message_queue,\n",
-    "    orchestrator=AgentOrchestrator(llm=Settings.llm),\n",
+    "    orchestrator=AgentOrchestrator(llm=llm),\n",
     "    vector_store=vector_index.storage_context.vector_store,\n",
     "    # port=8001\n",
     ")\n",
@@ -248,7 +198,7 @@
     "# define Tool Service\n",
     "tool_service = ToolService(\n",
     "    message_queue=message_queue,\n",
-    "    tools=[query_engine_tools, adding_tool],\n",
+    "    tools=tools,\n",
     "    running=True,\n",
     "    step_interval=0.5,\n",
     ")\n",
@@ -260,25 +210,46 @@
     "        message_queue=message_queue,\n",
     "        tool_service=tool_service,\n",
     "    )\n",
-    "    for t in [query_engine_tools, adding_tool]\n",
+    "    for t in tools\n",
     "]\n",
     "\n",
     "\n",
     "# define Agent and agent service\n",
-    "worker1 = FunctionCallingAgentWorker.from_tools(\n",
-    "# worker1 = ReActAgentWorker.from_tools(\n",
+    "# worker1 = FunctionCallingAgentWorker.from_tools(\n",
+    "worker1 = ReActAgent.from_tools(\n",
     "    meta_tools,\n",
-    "    # tool_service,\n",
-    "    llm=hf_llm,\n",
+    "    llm=llm,\n",
+    "    verbose=True\n",
     ")\n",
+    "\n",
     "# agent1 = worker1.as_agent()\n",
-    "agent1 = worker1.as_agent()\n",
-    "agent_server_1 = AgentService(\n",
-    "    agent=agent1,\n",
-    "    message_queue=message_queue,\n",
-    "    description=\"Used to retrieve values from a spreadsheet\",\n",
-    "    service_name=\"spreadsheet_reader_agent\",\n",
-    ")"
+    "# agent_server_1 = AgentService(\n",
+    "#     agent=agent1,\n",
+    "#     message_queue=message_queue,\n",
+    "#     description=\"Used to retrieve values from a spreadsheet\",\n",
+    "#     service_name=\"spreadsheet_reader_agent\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_str = \"What is the Disposition Fee and Sales Cost?\"\n",
+    "\n",
+    "response = worker1.chat(query_str)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.text"
    ]
   },
   {
@@ -313,9 +284,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "LocalLauncher?"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -782,18 +800,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
