--- a/dspy_multiagent.ipynb
+++ b/dspy_multiagent.ipynb
@@ -4,21 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip3 install dspy-ai"
+    "!pip3 install llama-index llama-parse llama-index-embeddings-huggingface accelerate dspy-ai openpyxl langchain chromadb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip3 install accelerate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip3 install llama-index-embeddings-huggingface"
+    "!pip3 install flash-attn --no-build-isolation"
    ]
   },
   {
@@ -39,21 +32,28 @@
     "# from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
     "# from llama_index.readers.file import PandasExcelReader\n",
     "# from llama_index.core.embeddings import resolve_embed_model\n",
-    "# from transformers import AutoTokenizer\n"
+    "# from transformers import AutoTokenizer\n",
+    "\n",
+    "from typing import List, Any, Callable, Optional\n",
+    "from pydantic import BaseModel\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class GenerateAnswer(dspy.Signature):\n",
-    "    \"\"\"Answer questions with short factoid answers.\"\"\"\n",
+    "# class SentimentSummary(dspy.Signature):\n",
+    "#     \"\"\"Given the sentiment label craft a sentiment summary of the given text so that the summary justifies the sentiment label.\"\"\"\n",
+    "#     text = dspy.InputField(desc=\"Sentiment text\")\n",
+    "#     sentiment_label = dspy.InputField(desc=\"Sentiment label\")\n",
+    "#     answer = dspy.OutputField(desc=\"Sentiment label: {sentiment_label}\\n\\nSummary: {sentiment summary}\")\n",
     "\n",
-    "    context_str = dspy.InputField(desc=\"contains relevant facts\")\n",
+    "class GenerateAnswer(dspy.Signature):\n",
+    "    \"\"\"Parses through spreadsheet information and returns requested values.\"\"\"\n",
+    "\n",
+    "    context_str = dspy.InputField(desc=\"data in spreadsheet format.\")\n",
     "    query_str = dspy.InputField()\n",
-    "    answer = dspy.OutputField(desc=\"value from the spreadsheet in the retriever.\")\n",
+    "    answer = dspy.OutputField(desc=\"the float value from the spreadsheet.\")\n",
     "\n",
     "\n",
     "class RAG(dspy.Module):\n",
@@ -71,10 +71,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Tool(BaseModel):\n",
+    "    name: str\n",
+    "    desc: str\n",
+    "    input_variable: str\n",
+    "    func: Callable\n",
+    "    \n",
+    "# class GiveTime:\n",
+    "#     name = \"GiveTime\"\n",
+    "#     input_variable = \"empty\"\n",
+    "#     desc = \"takes an empty string and returns the current local time\"\n",
+    "\n",
+    "#     def __init__(self, k=3):\n",
+    "#         pass\n",
+    "   \n",
+    "#     def __call__(self, *args, **kwargs):\n",
+    "#         return datetime.datetime.now().strftime(\"%H:%M:%S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_values(input_variable: List[float])->float:\n",
+    "    return sum(input_variable)\n",
+    "\n",
+    "adding_tool = Tool(name=\"addition\", desc=\"add a list of floats together\", input_variable=\"input_variable\", func=add_values)\n",
+    "\n",
+    "# test_tools = [\n",
+    "    # Tool(name=\"addition\", description=\"add a list of floats together\", requires=\"values\", func=add_values)\n",
+    "    # Tool(name=\"local business lookup\", description=\"Look up businesses by category\", requires=\"business category\", func=lambda x: \"Bills landscaping: 415-555-5555\")\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first model load...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleting model...\n",
+      "reloading model...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gc\n",
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM\n",
+    "from dspy.retrieve.chromadb_rm import ChromadbRM\n",
+    "import chromadb\n",
+    "from chromadb.utils import embedding_functions\n",
+    "from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
+    "from llama_index.readers.file import PandasExcelReader\n",
+    "CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
+    "CHROMADB_DIR = \"/workspace/data/db/\"\n",
+    "\n",
     "access_token = \"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\"\n",
     "# model_name = \"EleutherAI/gpt-neo-125m\"\n",
     "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\"\n",
@@ -82,31 +157,77 @@
     "# model_name = \"meta-llama/Meta-Llama-3-8B-Instruct\" # 8K context window\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
     "# model_name = \"clibrain/mamba-2.8b-instruct-openhermes\" # 8K context window\n",
-    "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
+    "print('first model load...')\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "llm = dspy.HFModel(model=model_name, hf_device_map='auto', token=access_token)\n",
     "llm.kwargs['max_new_tokens']=1000\n",
-    "llm.kwargs['do_sample']=False\n",
+    "llm.kwargs['do_sample']=True\n",
     "# llm.kwargs['typical_p']=0.9\n",
-    "# llm.kwargs['temperature']=0.1\n",
-    "# dspy.settings.configure(lm=llm)\n",
+    "# llm.kwargs['temperature']=0.0\n",
     "\n",
-    "colbert = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
     "\n",
-    "# llm.model=None\n",
-    "# gc.collect\n",
-    "# llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, trust_remote_code=True, device_map=\"auto\", attn_implementation=\"flash_attention_2\",  torch_dtype=torch.float16)\n",
+    "print('deleting model...')\n",
+    "llm.model=None\n",
+    "gc.collect\n",
+    "print('reloading model...')\n",
+    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
+    "                                               trust_remote_code=True, device_map=\"auto\", \n",
+    "                                               attn_implementation=\"flash_attention_2\",  \n",
+    "                                               torch_dtype=torch.float16)\n",
+    "\n",
     "# llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
     "# llm.tokenizer.pad_token_id = llm.tokenizer.eos_token_id\n",
     "\n",
-    "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
-    "# documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
-    "# embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
-    "# vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
+    "# retriever = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
+    "# filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
+    "# docs = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
+    "# # documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
+    "# # embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
+    "# # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
     "# # vector_index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
-    "# retriever = vector_index.as_retriever(top_k=2)\n",
+    "# # retriever = vector_index.as_retriever(top_k=2)\n",
     "\n",
-    "dspy.settings.configure(lm=llm, rm=retriever)\n"
+    "# chroma_client = chromadb.PersistentClient(path=CHROMADB_DIR)\n",
+    "# collection = chroma_client.get_or_create_collection(name=CHROMA_COLLECTION_NAME)\n",
+    "# text_splitter = SentenceTransformersTokenTextSplitter()\n",
+    "\n",
+    "# ids = []\n",
+    "# documents = []\n",
+    "# metadatas = []\n",
+    "# chunks = text_splitter.create_documents([docs[0].text], )\n",
+    "# for chunk_no, chunk in enumerate(chunks):\n",
+    "#     ids.append(f\"{chunk_no}\")\n",
+    "#     documents.append(chunk.page_content)\n",
+    "#     # metadatas.append({\"title\":})\n",
+    "# if ids:\n",
+    "#     collection.upsert(ids=ids, documents=documents)#, metadatas=metadatas)\n",
+    "\n",
+    "# # collection.upsert(documents=[docs[0].text])\n",
+    "\n",
+    "\n",
+    "# # default_ef = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')\n",
+    "# default_ef = embedding_functions.DefaultEmbeddingFunction()\n",
+    "# retriever = ChromadbRM(CHROMA_COLLECTION_NAME, CHROMADB_DIR, default_ef, k=3)\n",
+    "\n",
+    "# dspy.settings.configure(lm=llm, rm=retriever)\n",
+    "dspy.settings.configure(lm=llm)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "uncompiled_rag = RAG()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "question = \"What is the Disposition Fee?\"\n",
+    "answer = uncompiled_rag(question).answer\n",
+    "print(answer)"
    ]
   },
   {
@@ -115,21 +236,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SentimentSummary(dspy.Signature):\n",
-    "    \"\"\"Given the sentiment label craft a sentiment summary of the given text so that the summary justifies the sentiment label.\"\"\"\n",
-    "    text = dspy.InputField(desc=\"Sentiment text\")\n",
-    "    sentiment_label = dspy.InputField(desc=\"Sentiment label\")\n",
-    "    answer = dspy.OutputField(desc=\"Sentiment label: {sentiment_label}\\n\\nSummary: {sentiment summary}\")\n",
+    "#fine tune spreadsheet model\n",
+    "# dspy module class for multiagent stuff with tools\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
+    "docs = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\", pandas_config={'keep_default_na':False}).load_data(filepath)\n",
+    "# docs2 = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SpreadsheetValues(dspy.Signature):\n",
+    "    \"\"\"Parses through spreadsheet information and returns requested values.\"\"\"\n",
+    "\n",
+    "    context = dspy.InputField(desc=\"data in spreadsheet format.\")\n",
+    "    question = dspy.InputField()\n",
+    "    answer = dspy.OutputField(desc=\"the float value or values from the spreadsheet.\")\n",
+    "\n",
+    "# class GoogleSearch(dspy.Signature):\n",
+    "#     \"\"\"Searches Google for a query and returns the top results.\"\"\"\n",
+    "\n",
+    "#     query = dspy.InputField()\n",
+    "#     results = dspy.OutputField(desc=\"the top search results from Google.\")\n",
     "\n",
     "\n",
-    "class GenerateAnswer(dspy.Signature):\n",
-    "    \"\"\"Answer questions with short factoid answers.\"\"\"\n",
     "\n",
-    "    context_str = dspy.InputField(desc=\"contains relevant facts\")\n",
-    "    query_str = dspy.InputField()\n",
-    "    answer = dspy.OutputField(desc=\"often between 1 and 5 words\")\n",
+    "agent = dspy.ReAct(SpreadsheetValues) #dspy.Retrieve(k=1) for a tool , tools=[adding_tool] \n",
+    "# classify = dspy.Predict(SpreadsheetValues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:540: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+      "  warnings.warn(\n",
+      "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:562: UserWarning: `do_sample` is set to `False`. However, `top_k` is set to `20` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_k`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "question='Retrieve the following values from the spreadsheet: Selling Costs, Disposition Fee, Net Operating Income, Loan Assumption/Payoff, Return of Forecasted Reserves, CF Y 11, Return of Maximum Offering Amount, Projected Terminal Cap Rate.\\nThen add Disposition Fee and Selling Cost together.'\n",
     "\n",
-    "\n"
+    "# question=\"What is the Disposition Fee and Selling Cost? There may be duplicate fields. Use the one that returns a value between 0 and 1.\"\n",
+    "# context=text_representation\n",
+    "context=docs[0].text\n",
+    "result = agent(question=question, context=context, verbose=True)\n",
+    "# result = classify(question=question, context=context)\n",
+    "print(f\"Final Predicted Answer:\\n\\n{result.answer}\")"
    ]
   },
   {
@@ -137,12 +308,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
+    "data = pd.read_excel(filepath, sheet_name=\"5 - Disposition Analysis\", header=None)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.dropna(axis=1, how='all', inplace=True)\n",
+    "data.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.dropna(axis=0, how='all', inplace=True)\n",
+    "data.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_representation = \"Spreadsheet Data:\\n\\n\"\n",
+    "for index, row in data.iterrows():\n",
+    "    row_text = ''#f\"Record {index + 1}: \"\n",
+    "    row_items = []\n",
+    "    for col_name, value in row.items():\n",
+    "        # Handle NaN values explicitly if needed\n",
+    "        value_text = 'None' if pd.isna(value) else str(value)\n",
+    "        row_items.append(f\"{col_name}: {value_text}\")\n",
+    "    row_text += \", \".join(row_items)\n",
+    "    text_representation += row_text + \"\\n\"\n",
+    "\n",
+    "# print(text_representation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "from llama_index.core.query_pipeline import QueryPipeline as QP, InputComponent, FnComponent\n",
     "from dspy.predict.llamaindex import DSPyComponent, LlamaIndexModule\n",
     "\n",
     "dspy_component = DSPyComponent(\n",
-    "    dspy.ChainOfThought(GenerateAnswer)\n",
+    "    dspy.ChainOfThought(GenerateAnswer),\n",
+    "    # dspy.ReAct(\"question -> answer\", tools=[dspy.Retrieve(k=1), adding_tool] )\n",
     ")\n",
     "\n",
     "retriever_post = FnComponent(\n",
@@ -169,12 +390,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "agent = dspy.ReAct(\"question -> answer\", tools=[dspy.Retrieve(k=1)])"
+    "out = dspy_qp(query_str=\"What is the Disposition Fee and Selling Cost? Add them together.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "print(out.answer)"
    ]
   },
   {
@@ -182,8 +408,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "agent(question=\"What is the Disposition Fee?\")"
+    "agent = dspy.ReAct(\"question -> answer\", tools=[dspy.Retrieve(k=1), adding_tool] )\n",
+    "agent(question=\"What is the Disposition Fee and Selling Cost?\")"
    ]
   },
   {
