--- a/ollama.ipynb
+++ b/ollama.ipynb
@@ -15,11 +15,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "\n",
-    "LLAMA_API_KEY = 'llx-q5yu4FxUqUChxv4dpGKjSvgN7nSwb8rWPqWoxhkP0NqmQKmv'\n",
     "parser = LlamaParse(api_key=LLAMA_API_KEY, result_type=\"markdown\")"
    ]
   },
@@ -100,7 +105,6 @@
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
     "# documents[0].text = documents[0].text.split(\"\\n\")\n",
     "# import os\n",
-    "# access_token = \"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\"\n",
     "# os.environ['HF_TOKEN']=access_token\n",
     "# model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name=\"HuggingFaceH4/zephyr-7b-alpha\"\n",
@@ -391,7 +395,6 @@
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
     "# documents[0].text = documents[0].text.split(\"\\n\")\n",
     "# import os\n",
-    "# access_token = \"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\"\n",
     "# os.environ['HF_TOKEN']=access_token\n",
     "# model_name = \"jmars/trithemius-mistral-0.3-7b\"\n",
     "# model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n"
@@ -485,7 +488,6 @@
     "nest_asyncio.apply()\n",
     "\n",
     "import os\n",
-    "access_token = \"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\"\n",
     "os.environ['HF_TOKEN']=access_token\n",
     "\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
